--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-pdf/renderer": "^4.3.2",
     "framer-motion": "^12.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
